--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -3,9 +3,9 @@
   }
   
   :root {
-    --primary: #44e9ff;
-    --secondary: #497980;
-    --tertiary: rgb(192, 246, 253);
+    --primary: #240324;
+    --secondary: #d851c6;
+    --tertiary: rgb(104, 78, 98);
     --grey: #333;
     font-size: 62.5%;
   }
@@ -139,7 +139,7 @@
     border: none;
     display: inline-block;
     padding: 10px 15px;
-    background: var(--primary);
+    background: var(--tertiary);
     font-size: 2.2rem;
     border-radius: 12px;
     position: relative;
